# minishell

./: CMakeLists.txt  Makefile  minishell
includes/: minishell.h
libft/: Makefile  ft_lstadd_back.c  ft_lstnew.c  ft_strtrim.c  libft.h
src/: echo.c  env.c  envCreate.c  export.c  ft_pwd.c  main.c  utils.c
